--- a/dvc.yaml
+++ b/dvc.yaml
@@ -20,3 +20,15 @@ stages:
     - models/best_model.pkl
     - models/grid_search_results.json
     - models/model_metadata.json
+  train-model:
+    cmd: python src/train_model.py
+    deps:
+    - data/processed/X_test.csv
+    - data/processed/X_train.csv
+    - data/processed/y_test.csv
+    - data/processed/y_train.csv
+    - models/grid_search_results.json
+    - src/train_model.py
+    outs:
+    - models/final_model.pkl
+    - models/training_results.json
