--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ dependencies = [
     "numpy>=2.3.4",
     "pandas>=2.3.3",
     "pydantic>=2.12.3",
+    "pyjwt>=2.10.1",
+    "pytest>=8.4.2",
+    "requests>=2.32.5",
     "scikit-learn>=1.7.2",
     "seaborn>=0.13.2",
 ]
